syntax = "proto3";
package StorageService;

// 定义一个新的对象
message MessagedataInfo_Request {
	int32      lOperationTarget =1;     // 操作目标
    int32      lOperationType   =2;     // 操作类型
	bytes      bData            =3;     // 数据内容，可能含二级list或map
}

message MessagedataInfo_Response {
    string  strCode =1;       //响应
    string  strMsg  =2;       //详细信息
}

// rpc  
service storageInfo {
    rpc PushStoragedataInfo (MessagedataInfo_Request) returns (MessagedataInfo_Response) {}
}
